CUI-16 - Fix text overflow on icons with padding, fix alignment in icongroup

--- a/source/less/base/icons.less
+++ b/source/less/base/icons.less
@@ -63,7 +63,7 @@
   //text-indent: 100%;
   //white-space: nowrap;
   
-  // color: transparent; // Dangert, this doesn't work with font icons
+  color: transparent; // This works for font icons because we set color on the :before element
   overflow: hidden;
 }
 
