--- a/source/less/components/toolbar.less
+++ b/source/less/components/toolbar.less
@@ -49,6 +49,8 @@ The top toolbar with action icons
     [class^="icon-"],
     [class*=" icon-"] {
         .icon-medium;
+        
+        vertical-align: top; // line up correctly
     }
     
     // For direct descendants only, apply grouping
